media/overseerr/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: overseerr-svc
spec:
  ports:
    - name: http
      port: 80
      targetPort: 5055
  selector:
    app: overseerr
