media/overseerr/base/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: overseerr-external
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: "Host(`media.${SECRET_DOMAIN_0}`)"
      kind: Rule
      services:
        - name: overseerr-svc
          port: 80
  tls: {}
